--- a/client/login.css
+++ b/client/login.css
@@ -2,29 +2,19 @@
 
 body {
     align-items: center;
-    display: flex;
-    font-family: 'Montserrat', sans-serif;
-    flex-direction: column;
 }
 
 form {
-    text-align: center;
     display: flex;
     flex-direction: column;
     height: 150px;
     justify-content: space-between;
 }
 
+label {
+    color: #F07D00;
+    font-weight: bold;
+}
 button[type=submit] {
-    margin-top: 0;
-}
-img{
-    width: 500px;
-    height: 600px;
-    margin-bottom: 10px;
-}
-
-#particles-js{
-    position: absolute;
-    z-index: -1;
+    margin-top: 1rem;
 }
