--- a/client/style.css
+++ b/client/style.css
@@ -2,8 +2,6 @@ html,
 body {
     height: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /*font-family: 'Montserrat', sans-serif;*/
-    font-family: Mont;
     font-size: 24px;
     margin: 0;
 }
@@ -21,19 +19,17 @@ input {
     border-radius: 20px;
     padding: 0 20px;
     box-sizing: border-box;
-    margin-bottom: 10px;
 }
 
 button {
-    border: 2px solid #473eff;
-    background: #255ec0;
+    border: 2px solid orangered;
+    background: #F07D00;
     border-radius: 20px;
     height: 40px;
     cursor: pointer;
     font-size: 24px;
     color: white;
     padding: 0 20px;
-    margin-top:0;
 }
 
 button:hover {            
